ajuste no layout das telas

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,106 +2,253 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title> MentoriaT3ch </title>
+
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title> mentoriaT3ch </title>
 
   <link rel="shortcut icon" href="img/logoRoxo.png">
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- Font Awesome icons (free version)-->
+  <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link th:href="@{/css/styles.css}" href="css/styles.css" rel="stylesheet" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lobster&family=Open+Sans:wght@600&family=Ubuntu:ital,wght@1,500&display=swap" rel="stylesheet">
 
 </head>
 
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.sidenav');
-        var instances = M.Sidenav.init(elems);
-    });
-    document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.parallax');
-        var instances = M.Parallax.init(elems);
-    });
-</script>
-
 <body>
-
-
-<nav class="black">
-  <div class="nav-wrapper">
-    <a href="#" class="brand-logo center grey-text">MentoriaT3ch</a>
+<!-- Responsive navbar-->
+<nav class="navbar navbar-expand-lg" style="background-color:#e2d9f3">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="https://img.icons8.com/fluency/48/000000/source-code.png"/>
+      </div>
+      <div class="col">
+        <h1 style="color:#2c1a4d"> mentoriaT3ch </h1>
+      </div>
+    </div>
   </div>
 </nav>
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img width="150" src="img/bg.jpg">
+<!-- Page Content-->
+<div class="row" style="background-color:#e2d9f3">
+  <!-- Heading Row-->
+  <div class="row gx-4 gx-lg-5 align-items-center my-5" >
+    <div class="col-lg-6 center">
+      <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
+    </div>
+    <div class="col-lg-4 center" style="margin: 15px">
+      <h5 class="font-weight-light" style="color:#2c1a4d";>E-book gratuito que vai te ensinar</h5>
+      <h2 class="font-weight-black" style="color:#dc3545";>Java com Spring Mvc</h2>
+      <p style="color:#2c1a4d";>
+        O Guia Definitivo para você aprender a trabalhar com Java e com o framework Spring Mvc.
+      </p>
+      <a href="#form" type="button" class="btn btn-lg text-white" style="background-color:#dc3545";>
+        Baixe o e-book agora mesmo!
+      </a>
+    </div>
   </div>
 </div>
 
-<div class="section black">
-  <div class="row container header center-align">
-    <div class="row">
-      <h2 class="header grey-text">Cadastre-se  </h2>
-      <h5 class="grey-text text-darken-3 lighten-3">
-        Receba agora o ebook de Java com Spring Mvc - criando seu primeiro CRUD </h5>
-      <form class="col s12" th:action="@{/mT3ch-ebook-spring-mvc}" method="post">
-        <div class="row">
 
-          <div class="input-field col s6">
-            <input name="nome" id="nome" type="text" class="validate grey-text" required>
-            <label for="nome"> Nome </label>
-          </div>
+  <!-- Call to Action-->
+  <div class="container my-5 py-4 text-center">
+    <div class="container">
+      <h5 class="font-weight-light" style="color:#140330";> Neste e-book gratuito  </h5>
+      <h1 class="font-weight-black" style="color:#140330";> Você vai aprender </h1>
+    </div>
+  </div>
 
-          <div class="input-field col s6">
-            <input name="sobrenome" id="sobrenome" type="text" class="validate grey-text" required>
-            <label for="sobrenome"> Sobrenome </label>
-          </div>
+
+
+<div class="container my-5 py-4 text-center">
+  <div class="row gx-4 gx-lg-5">
+
+    <div class="col-md-4 mb-5" >
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";>Introdução</h3>
         </div>
-
-        <div class="row">
-
-          <div class="input-field col s6">
-            <input name="email" id="email" type="email" class="validate grey-text" required>
-            <label for="email"> Email </label>
-          </div>
-
-          <div class="input-field col s6">
-            <input name="telefone" id="telefone" type="tel" class="validate grey-text" required>
-            <label for="telefone"> Telefone: 11999999999 </label>
-          </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Aprenda o que é Java e como criar seu primeiro projeto no ecossistema SpringBoot.
+          </p>
         </div>
-
-
-        <div class="row">
-          <div class="col s12">
-
-            <label>
-              <input type="checkbox" class="filled-in"  />
-              <span class="grey-text"> Permitir que as informações sejam salvas com segurança </span>
-            </label>
-          </div>
-
-          <div class="input-field col s12">
-            <<button class="btn waves-effect waves-light" type="submit" name="action"> Enviar </button>
-          </div>
-        </div>
-      </form>
+      </div>
     </div>
 
-  </div>
-</div>
-<div class="parallax-container ">
-  <div class="parallax ">
-    <img width="250 " src="img/img2.jpg">
+    <div class="col-md-4 mb-5">
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Java Web - Toomcat </h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Subir seu primeiro web server Java com Toomcat.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-5">
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Mapeamento ORM </h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Realizar integração e mapeamento ORM com JPA.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-5">
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Consistência de dados</h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Utilize as dependências do hibernate para salvar seus dados.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-5">
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Thymeleaf </h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Crie templates para seus projetos web.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-5">
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Driver Mysql </h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Realizar integração e consistência de dados com o banco de dados Mysql.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
-<script src="statics/js/main.js"></script>
 
+<div class="row" style="background-color:#e2d9f3">
+  <!-- Heading Row-->
+  <div class="row gx-4 gx-lg-5 align-items-center my-5" >
+    <div class="col-lg-6 center">
+      <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/sobre.jpg" style="margin-left: 80px">
+    </div>
+    <div class="col-lg-4 center" style="margin: 15px">
+      <h5 class="font-weight-light" style="color:#2c1a4d";>Conheça o autor</h5>
+      <h2 class="font-weight-black" style="color:#dc3545";> Olá sou o Giovanni de Carvalho </h2>
+      <p style="color:#2c1a4d";>
+        Tenho como foco um perfil em Y com 02 especialidades sendo elas: administração e tecnologia. Atualmente trabalho na engenharia de um grande banco com foco em modernização de produto e sistemas, desenvolvendo soluções de transformação digital com o cliente no centro.
+      </p>
+      <a href="#form" type="button" class="btn btn-lg text-white" style="background-color:#dc3545";>
+        Baixe o e-book agora mesmo!
+      </a>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class="row" id="form" >
+  <!-- Heading Row-->
+  <div class="row gx-4 gx-lg-5 align-items-center my-5" >
+    <div class="col-lg-4 center" style="margin: 15px">
+      <div class="col-lg-6 center">
+        <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
+      </div>
+    </div>
+    <div class="col-lg-6 center" style="margin: 15px";>
+      <div class="card">
+        <div class="card-body">
+          <form class="col s12" th:action="@{/mT3ch-ebook-spring-mvc}" method="post">
+
+            <h3 class="font-weight-light" style="color:#dc3545";> Cadastre-se para receber o e-book</h3>
+            <br>
+
+            <div class="row">
+              <div class="mb-3">
+                <label class="form-label"> Seu nome </label>
+                <input class="form-control validate grey-text" name="nome" type="text" required>
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label"> Seu sobrenome </label>
+                <input class="form-control validate grey-text" name="sobrenome" type="text" required>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="mb-3">
+                <label class="form-label"> Seu email </label>
+                <input class="form-control validate grey-text" name="email" type="email" required>
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label"> Seu telefone </label>
+                <input class="form-control validate grey-text" name="telefone" type="telefone" required>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
+                <label class="form-check-label" for="flexCheckDefault">
+                  Permitir que as informações sejam salvas com segurança
+                </label>
+              </div>
+
+              <div class="mb-3">
+                <button type="submit" class="btn btn-lg text-white" style="background-color:#dc3545";> Enviar </button>
+              </div>
+            </div>
+
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+  <div class="container px-4 px-lg-5">
+    <p class="m-0 text-center text-white">Copyright &copy; mentoriaT3ch </p>
+  </div>
+</footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
 </body>
 
 </html>
