--- a/src/main/resources/templates/pages/ebook.html
+++ b/src/main/resources/templates/pages/ebook.html
@@ -1,74 +1,137 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title> MentoriaT3ch </title>
-  <!-- Compiled and minified CSS -->
+
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title> mentoriaT3ch </title>
 
   <link rel="shortcut icon" href="img/logoRoxo.png">
+  <!-- Font Awesome icons (free version)-->
+  <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link th:href="@{/css/styles.css}" href="css/styles.css" rel="stylesheet" />
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lobster&family=Open+Sans:wght@600&family=Ubuntu:ital,wght@1,500&display=swap" rel="stylesheet">
 
 </head>
 
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.sidenav');
-        var instances = M.Sidenav.init(elems);
-    });
-    document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.parallax');
-        var instances = M.Parallax.init(elems);
-    });
-</script>
-
 <body>
-
-
-<nav class="black">
-  <div class="nav-wrapper">
-    <a href="/" class="brand-logo center grey-text">MentoriaT3ch</a>
+<!-- Responsive navbar-->
+<nav class="navbar navbar-expand-lg" style="background-color:#e2d9f3">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="https://img.icons8.com/fluency/48/000000/source-code.png"/>
+      </div>
+      <div class="col">
+        <h1 style="color:#2c1a4d"> mentoriaT3ch </h1>
+      </div>
+    </div>
   </div>
 </nav>
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img width="150" src="img/bg.jpg">
-  </div>
-</div>
-
-<div class="section black">
-  <div class="row container header center-align">
-    <div class="row">
-      <h2 class="header grey-text">Obrigado(a)  </h2>
-      <h5 class="grey-text text-darken-3 lighten-3">
-        Faça o download do ebook de Java com Spring Mvc - criando seu primeiro CRUD
-      </h5>
-
+<!-- Page Content-->
+<div class="row" style="background-color:#e2d9f3">
+  <!-- Heading Row-->
+  <div class="row gx-4 gx-lg-5 align-items-center my-5" >
+    <div class="col-lg-6 center">
+      <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
+    </div>
+    <div class="col-lg-4 center" style="margin: 15px">
+      <h2 class="font-weight-black" style="color:#dc3545";> Obrigado(a) </h2>
+      <h5 class="font-weight-light" style="color:#2c1a4d";> Você acabou de realizar o download do nosso e-book </h5>
       <tr th:each="ebooks: ${ebook}"></tr>
+      <a href="img/ebookSpring.pdf" download type="button" class="btn btn-lg text-white" style="background-color:#dc3545";>
+        Baixe o e-book agora mesmo!
+      </a>
+    </div>
+  </div>
+</div>
+
+
+<!-- Call to Action-->
+<div class="container my-5 py-4 text-center">
+  <div class="container">
+    <h1 class="font-weight-black" style="color:#140330";> Veja nossos outros e-books</h1>
+  </div>
+</div>
+
+
+
+<div class="container my-5 py-4 text-center">
+  <div class="row gx-4 gx-lg-5">
+
+    <div class="col-md-4 mb-5" >
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Java e Arquiteturas Web </h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Aprenda Java 8, lógica de programação e Arquitetura Web.
+          </p>
+          <a href="img/ebookSpring.pdf" download type="button" class="btn btn-primary text-white">
+            Baixe o e-book agora mesmo!
+          </a>
+        </div>
+      </div>
     </div>
 
-    <div class="input-field col s12">
-      <a class="btn waves-effect waves-light"
-         href="img/ebookSpring.pdf" download> Baixar o ebook Spring MVC</a>
+    <div class="col-md-4 mb-5">
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Tecnologias para Web </h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Aprenda as 03 principais tecnologias da Web - Html5, Css3, JavaScript.
+          </p>
+          <a href="img/ebookSpring.pdf" download type="button" class="btn btn-primary text-white">
+            Baixe o e-book agora mesmo!
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-5">
+      <div class="card h-100" style="background-color:#140330";>
+        <div class="card-footer">
+          <h3 class="card-title" style="color:#dc3545";> Carreira Tech </h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text text-light">
+            Aprenda os princípios para iniciar na área da tecnologia.
+          </p>
+          <a href="img/ebookSpring.pdf" download type="button" class="btn btn-primary text-white">
+            Baixe o e-book agora mesmo!
+          </a>
+        </div>
+      </div>
     </div>
 
   </div>
 </div>
-<div class="parallax-container ">
-  <div class="parallax ">
-    <img width="250 " src="img/img2.jpg">
+
+
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+  <div class="container px-4 px-lg-5">
+    <p class="m-0 text-center text-white">Copyright &copy; mentoriaT3ch </p>
   </div>
-</div>
-
-<script src="statics/js/main.js"></script>
-
+</footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
 </body>
 
 </html>
