ajuste nas cores do layout

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,34 +25,34 @@
 
 <body>
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg" style="background-color:#e2d9f3">
+<nav class="navbar navbar-expand-lg" style="background-color:#140330">
   <div class="container">
     <div class="row">
       <div class="col">
         <img src="https://img.icons8.com/fluency/48/000000/source-code.png"/>
       </div>
       <div class="col">
-        <h1 style="color:#2c1a4d"> mentoriaT3ch </h1>
+        <h1 class="text-primary"> mentoriaT3ch </h1>
       </div>
     </div>
   </div>
 </nav>
 
 <!-- Page Content-->
-<div class="row" style="background-color:#e2d9f3">
+<div class="row" style="background-color:#140330";>
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5" >
     <div class="col-lg-6 center">
       <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
-      <h5 class="font-weight-light" style="color:#2c1a4d";>E-book gratuito que vai te ensinar</h5>
-      <h2 class="font-weight-black" style="color:#dc3545";>Java com Spring Mvc</h2>
-      <p style="color:#2c1a4d";>
+      <h5 class="font-weight-light text-light">E-book gratuito que vai te ensinar</h5>
+      <h2 class="font-weight-black text-primary">Java com Spring Mvc</h2>
+      <p class="text-light">
         O Guia Definitivo para você aprender a trabalhar com Java e com o framework Spring Mvc.
       </p>
-      <a href="#form" type="button" class="btn btn-lg text-white" style="background-color:#dc3545";>
-        Baixe o e-book agora mesmo!
+      <a href="#form" type="button" class="btn btn-lg text-white bg-primary">
+        Baixe o e-book agora!
       </a>
     </div>
   </div>
@@ -75,7 +75,7 @@
     <div class="col-md-4 mb-5" >
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";>Introdução</h3>
+          <h3 class="card-title text-primary" >Introdução</h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -88,7 +88,7 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Java Web - Toomcat </h3>
+          <h3 class="card-title text-primary" > Java Web - Toomcat </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -101,7 +101,7 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Mapeamento ORM </h3>
+          <h3 class="card-title text-primary"> Mapeamento ORM </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -114,7 +114,7 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Consistência de dados</h3>
+          <h3 class="card-title text-primary"> Consistência de dados</h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -127,7 +127,7 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Thymeleaf </h3>
+          <h3 class="card-title text-primary"> Thymeleaf </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -140,7 +140,7 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Driver Mysql </h3>
+          <h3 class="card-title text-primary"> Driver Mysql </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -153,20 +153,20 @@
 </div>
 
 
-<div class="row" style="background-color:#e2d9f3">
+<div class="row" style="background-color:#140330">
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5" >
     <div class="col-lg-6 center">
       <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/sobre.jpg" style="margin-left: 80px">
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
-      <h5 class="font-weight-light" style="color:#2c1a4d";>Conheça o autor</h5>
-      <h2 class="font-weight-black" style="color:#dc3545";> Olá sou o Giovanni de Carvalho </h2>
-      <p style="color:#2c1a4d";>
+      <h5 class="font-weight-light text-light">Conheça o autor</h5>
+      <h2 class="font-weight-black text-primary"> Olá sou o Giovanni de Carvalho </h2>
+      <p class="text-light">
         Tenho como foco um perfil em Y com 02 especialidades sendo elas: administração e tecnologia. Atualmente trabalho na engenharia de um grande banco com foco em modernização de produto e sistemas, desenvolvendo soluções de transformação digital com o cliente no centro.
       </p>
-      <a href="#form" type="button" class="btn btn-lg text-white" style="background-color:#dc3545";>
-        Baixe o e-book agora mesmo!
+      <a href="#form" type="button" class="btn btn-lg bg-primary text-white">
+        Baixe o e-book agora!
       </a>
     </div>
   </div>
@@ -179,7 +179,7 @@
 <div class="row" id="form" >
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5" >
-    <div class="col-lg-4 center" style="margin: 15px">
+    <div class="col-lg-4 center " style="margin: 15px">
       <div class="col-lg-6 center">
         <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
       </div>
@@ -189,7 +189,7 @@
         <div class="card-body">
           <form class="col s12" th:action="@{/mT3ch-ebook-spring-mvc}" method="post">
 
-            <h3 class="font-weight-light" style="color:#dc3545";> Cadastre-se para receber o e-book</h3>
+            <h3 class="font-weight-light text-primary" style="color:#dc3545";> Cadastre-se para receber o e-book</h3>
             <br>
 
             <div class="row">
@@ -225,8 +225,8 @@
                 </label>
               </div>
 
-              <div class="mb-3">
-                <button type="submit" class="btn btn-lg text-white" style="background-color:#dc3545";> Enviar </button>
+              <div class="mb-6">
+                <button type="submit" class="btn btn-lg text-white bg-primary"> Enviar </button>
               </div>
             </div>
 
