--- a/src/main/resources/templates/pages/ebook.html
+++ b/src/main/resources/templates/pages/ebook.html
@@ -26,32 +26,32 @@
 
 <body>
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg" style="background-color:#e2d9f3">
+<nav class="navbar navbar-expand-lg" style="background-color:#140330">
   <div class="container">
     <div class="row">
       <div class="col">
         <img src="https://img.icons8.com/fluency/48/000000/source-code.png"/>
       </div>
       <div class="col">
-        <h1 style="color:#2c1a4d"> mentoriaT3ch </h1>
+        <h1 class="text-primary"> mentoriaT3ch </h1>
       </div>
     </div>
   </div>
 </nav>
 
 <!-- Page Content-->
-<div class="row" style="background-color:#e2d9f3">
+<div class="row" style="background-color:#140330">
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5" >
     <div class="col-lg-6 center">
       <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
-      <h2 class="font-weight-black" style="color:#dc3545";> Obrigado(a) </h2>
-      <h5 class="font-weight-light" style="color:#2c1a4d";> Você acabou de realizar o download do nosso e-book </h5>
+      <h2 class="font-weight-black text-primary"> Obrigado(a) </h2>
+      <h5 class="font-weight-light text-light"> Você acabou de realizar o download do nosso e-book </h5>
       <tr th:each="ebooks: ${ebook}"></tr>
-      <a href="img/ebookSpring.pdf" download type="button" class="btn btn-lg text-white" style="background-color:#dc3545";>
-        Baixe o e-book agora mesmo!
+      <a href="img/ebookSpring.pdf" download type="button" class="btn btn-lg text-white text-primary bg-primary">
+        Baixe o e-book agora!
       </a>
     </div>
   </div>
@@ -73,14 +73,14 @@
     <div class="col-md-4 mb-5" >
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Java e Arquiteturas Web </h3>
+          <h3 class="card-title text-primary"> Java e Arquiteturas Web </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
             Aprenda Java 8, lógica de programação e Arquitetura Web.
           </p>
-          <a href="img/ebookSpring.pdf" download type="button" class="btn btn-primary text-white">
-            Baixe o e-book agora mesmo!
+          <a href="img/ebookJava.pdf" download type="button" class="btn btn-primary text-white bg-primary">
+            Baixe o e-book agora!
           </a>
         </div>
       </div>
@@ -89,14 +89,14 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Tecnologias para Web </h3>
+          <h3 class="card-title text-primary"> Tecnologias para Web </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
             Aprenda as 03 principais tecnologias da Web - Html5, Css3, JavaScript.
           </p>
-          <a href="img/ebookSpring.pdf" download type="button" class="btn btn-primary text-white">
-            Baixe o e-book agora mesmo!
+          <a href="img/ebookWeb.pdf" download type="button" class="btn btn-primary text-white bg-primary">
+            Baixe o e-book agora!
           </a>
         </div>
       </div>
@@ -105,14 +105,14 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title" style="color:#dc3545";> Carreira Tech </h3>
+          <h3 class="card-title text-primary"> Carreira Tech </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
             Aprenda os princípios para iniciar na área da tecnologia.
           </p>
-          <a href="img/ebookSpring.pdf" download type="button" class="btn btn-primary text-white">
-            Baixe o e-book agora mesmo!
+          <a href="img/ebook-carreira-t3ch-by-mnetoriaT3ch.pdf" download type="button" class="btn btn-primary bg-primary text-white">
+            Baixe o e-book agora!
           </a>
         </div>
       </div>
