ajuste no template dos ebooks

--- a/src/main/resources/templates/pages/ebook.html
+++ b/src/main/resources/templates/pages/ebook.html
@@ -73,11 +73,11 @@
     <div class="col-md-4 mb-5" >
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Java e Arquiteturas Web </h3>
+          <h3 class="card-title text-primary"> Java 8 </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
-            Aprenda Java 8, lógica de programação e Arquitetura Web.
+            Aprenda Java 8, lógica de programação e programação orientada a objetos.
           </p>
           <a href="img/ebookJava.pdf" download type="button" class="btn btn-primary text-white bg-primary">
             Baixe o e-book agora!
@@ -89,11 +89,11 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100" style="background-color:#140330";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Tecnologias para Web </h3>
+          <h3 class="card-title text-primary"> Arquitetura Web </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
-            Aprenda as 03 principais tecnologias da Web - Html5, Css3, JavaScript.
+            Aprenda sobre a principal arquitetura de software.
           </p>
           <a href="img/ebookWeb.pdf" download type="button" class="btn btn-primary text-white bg-primary">
             Baixe o e-book agora!
