Ajuste no layout e cores da index - ebook spring mvc

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,21 +25,21 @@
 
 <body>
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg" style="background-color:#140330">
+<nav class="navbar navbar-expand-lg" style="background-color:#14100D">
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="https://img.icons8.com/fluency/48/000000/source-code.png"/>
+        <img src="https://img.icons8.com/ios-filled/50/fa314a/source-code.png"/>
       </div>
       <div class="col">
-        <h1 class="text-primary"> mentoriaT3ch </h1>
+        <h1 class="text-danger"> mentoria_tech </h1>
       </div>
     </div>
   </div>
 </nav>
 
 <!-- Page Content-->
-<div class="row" style="background-color:#140330";>
+<div class="row" style="background-color:#14100D";>
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5" >
     <div class="col-lg-6 center">
@@ -47,11 +47,11 @@
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
       <h5 class="font-weight-light text-light">E-book gratuito que vai te ensinar</h5>
-      <h2 class="font-weight-black text-primary">Java com Spring Mvc</h2>
+      <h2 class="font-weight-black text-danger">Java com Spring Mvc</h2>
       <p class="text-light">
         O Guia Definitivo para você aprender a trabalhar com Java e com o framework Spring Mvc.
       </p>
-      <a href="#form" type="button" class="btn btn-lg text-white bg-primary">
+      <a href="#form" type="button" class="btn btn-lg text-white bg-danger">
         Baixe o e-book agora!
       </a>
     </div>
@@ -62,8 +62,8 @@
   <!-- Call to Action-->
   <div class="container my-5 py-4 text-center">
     <div class="container">
-      <h5 class="font-weight-light" style="color:#140330";> Neste e-book gratuito  </h5>
-      <h1 class="font-weight-black" style="color:#140330";> Você vai aprender </h1>
+      <h5 class="font-weight-light" style="color:#14100D";> Neste e-book gratuito  </h5>
+      <h1 class="font-weight-black" style="color:#14100D";> Você vai aprender </h1>
     </div>
   </div>
 
@@ -73,9 +73,9 @@
   <div class="row gx-4 gx-lg-5">
 
     <div class="col-md-4 mb-5" >
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary" >Introdução</h3>
+          <h3 class="card-title text-danger" >Introdução</h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -86,9 +86,9 @@
     </div>
 
     <div class="col-md-4 mb-5">
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary" > Java Web - Toomcat </h3>
+          <h3 class="card-title text-danger" > Java Web - Toomcat </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -99,9 +99,9 @@
     </div>
 
     <div class="col-md-4 mb-5">
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Mapeamento ORM </h3>
+          <h3 class="card-title text-danger"> Mapeamento ORM </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -112,9 +112,9 @@
     </div>
 
     <div class="col-md-4 mb-5">
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Consistência de dados</h3>
+          <h3 class="card-title text-danger"> Consistência de dados</h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -125,9 +125,9 @@
     </div>
 
     <div class="col-md-4 mb-5">
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Thymeleaf </h3>
+          <h3 class="card-title text-danger"> Thymeleaf </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -138,9 +138,9 @@
     </div>
 
     <div class="col-md-4 mb-5">
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Driver Mysql </h3>
+          <h3 class="card-title text-danger"> Driver Mysql </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
@@ -153,7 +153,7 @@
 </div>
 
 
-<div class="row" style="background-color:#140330">
+<div class="row" style="background-color:#14100D">
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5" >
     <div class="col-lg-6 center">
@@ -161,11 +161,11 @@
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
       <h5 class="font-weight-light text-light">Conheça o autor</h5>
-      <h2 class="font-weight-black text-primary"> Olá sou o Giovanni de Carvalho </h2>
+      <h2 class="font-weight-black text-danger"> Olá sou o Giovanni de Carvalho </h2>
       <p class="text-light">
         Tenho como foco um perfil em Y com 02 especialidades sendo elas: administração e tecnologia. Atualmente trabalho na engenharia de um grande banco com foco em modernização de produto e sistemas, desenvolvendo soluções de transformação digital com o cliente no centro.
       </p>
-      <a href="#form" type="button" class="btn btn-lg bg-primary text-white">
+      <a href="#form" type="button" class="btn btn-lg bg-danger text-white">
         Baixe o e-book agora!
       </a>
     </div>
@@ -189,7 +189,7 @@
         <div class="card-body">
           <form class="col s12" th:action="@{/mT3ch-ebook-spring-mvc}" method="post">
 
-            <h3 class="font-weight-light text-primary" style="color:#dc3545";> Cadastre-se para receber o e-book</h3>
+            <h3 class="font-weight-light text-danger";> Cadastre-se para receber o e-book</h3>
             <br>
 
             <div class="row">
@@ -226,7 +226,7 @@
               </div>
 
               <div class="mb-6">
-                <button type="submit" class="btn btn-lg text-white bg-primary"> Enviar </button>
+                <button type="submit" class="btn btn-lg text-white bg-danger"> Enviar </button>
               </div>
             </div>
 
@@ -242,7 +242,7 @@
 <!-- Footer-->
 <footer class="py-5 bg-dark">
   <div class="container px-4 px-lg-5">
-    <p class="m-0 text-center text-white">Copyright &copy; mentoriaT3ch </p>
+    <p class="m-0 text-center text-white">Copyright &copy; mentoria_tech </p>
   </div>
 </footer>
 <!-- Bootstrap core JS-->
