--- a/src/main/resources/templates/pages/ebook.html
+++ b/src/main/resources/templates/pages/ebook.html
@@ -26,31 +26,31 @@
 
 <body>
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg" style="background-color:#140330">
+<nav class="navbar navbar-expand-lg" style="background-color:#14100D">
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="https://img.icons8.com/fluency/48/000000/source-code.png"/>
+        <img src="https://img.icons8.com/ios-filled/50/fa314a/source-code.png"/>
       </div>
       <div class="col">
-        <h1 class="text-primary"> mentoriaT3ch </h1>
+        <h1 class="text-danger"> mentoria_tech </h1>
       </div>
     </div>
   </div>
 </nav>
 
 <!-- Page Content-->
-<div class="row" style="background-color:#140330">
+<div class="row" style="background-color:#14100D">
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5" >
     <div class="col-lg-6 center">
       <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
-      <h2 class="font-weight-black text-primary"> Obrigado(a) </h2>
+      <h2 class="font-weight-black text-danger"> Obrigado(a) </h2>
       <h5 class="font-weight-light text-light"> Você acabou de realizar o download do nosso e-book </h5>
       <tr th:each="ebooks: ${ebook}"></tr>
-      <a href="img/ebookSpring.pdf" download type="button" class="btn btn-lg text-white text-primary bg-primary">
+      <a href="img/ebookSpring.pdf" download type="button" class="btn btn-lg text-white text-primary bg-danger">
         Baixe o e-book agora!
       </a>
     </div>
@@ -61,7 +61,7 @@
 <!-- Call to Action-->
 <div class="container my-5 py-4 text-center">
   <div class="container">
-    <h1 class="font-weight-black" style="color:#140330";> Veja nossos outros e-books</h1>
+    <h1 class="font-weight-black" style="color:#14100D";> Veja nossos outros e-books</h1>
   </div>
 </div>
 
@@ -71,15 +71,15 @@
   <div class="row gx-4 gx-lg-5">
 
     <div class="col-md-4 mb-5" >
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Java 8 </h3>
+          <h3 class="card-title text-danger"> Java 8 </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
             Aprenda Java 8, lógica de programação e programação orientada a objetos.
           </p>
-          <a href="img/ebookJava.pdf" download type="button" class="btn btn-primary text-white bg-primary">
+          <a href="img/ebookJava.pdf" download type="button" class="btn btn-danger text-white bg-danger">
             Baixe o e-book agora!
           </a>
         </div>
@@ -87,15 +87,15 @@
     </div>
 
     <div class="col-md-4 mb-5">
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Arquitetura Web </h3>
+          <h3 class="card-title text-danger"> Arquitetura Web </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
             Aprenda sobre a principal arquitetura de software.
           </p>
-          <a href="img/ebookWeb.pdf" download type="button" class="btn btn-primary text-white bg-primary">
+          <a href="img/ebookWeb.pdf" download type="button" class="btn btn-danger text-white bg-danger">
             Baixe o e-book agora!
           </a>
         </div>
@@ -103,15 +103,15 @@
     </div>
 
     <div class="col-md-4 mb-5">
-      <div class="card h-100" style="background-color:#140330";>
+      <div class="card h-100" style="background-color:#14100D";>
         <div class="card-footer">
-          <h3 class="card-title text-primary"> Carreira Tech </h3>
+          <h3 class="card-title text-danger"> Carreira Tech </h3>
         </div>
         <div class="card-body">
           <p class="card-text text-light">
             Aprenda os princípios para iniciar na área da tecnologia.
           </p>
-          <a href="img/ebook-carreira-t3ch-by-mnetoriaT3ch.pdf" download type="button" class="btn btn-primary bg-primary text-white">
+          <a href="img/ebook-carreira-t3ch-by-mnetoriaT3ch.pdf" download type="button" class="btn btn-danger bg-danger text-white">
             Baixe o e-book agora!
           </a>
         </div>
