bugfix - ajuste no botão para dispositivos Apple

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
       <p class="text-light">
         O Guia Definitivo para você aprender a trabalhar com Java e com o framework Spring Mvc.
       </p>
-      <a href="#form" type="button" class="btn btn-lg text-white bg-danger">
+      <a th:href="@{#form}" class="btn text-white" style="background-color: #dc3545!important;">
         Baixe o e-book agora!
       </a>
     </div>
@@ -165,7 +165,7 @@
       <p class="text-light">
         Tenho como foco um perfil em Y com 02 especialidades sendo elas: administração e tecnologia. Atualmente trabalho na engenharia de um grande banco com foco em modernização de produto e sistemas, desenvolvendo soluções de transformação digital com o cliente no centro.
       </p>
-      <a href="#form" type="button" class="btn btn-lg bg-danger text-white">
+      <a th:href="@{#form}" class="btn text-white" style="background-color: #dc3545!important;">
         Baixe o e-book agora!
       </a>
     </div>
