--- a/src/main/resources/templates/pages/ebook.html
+++ b/src/main/resources/templates/pages/ebook.html
@@ -50,7 +50,7 @@
       <h2 class="font-weight-black text-danger"> Obrigado(a) </h2>
       <h5 class="font-weight-light text-light"> Você acabou de realizar o download do nosso e-book </h5>
       <tr th:each="ebooks: ${ebook}"></tr>
-      <a href="img/ebookSpring.pdf" download type="button" class="btn btn-lg text-white text-primary bg-danger">
+      <a href="img/ebookSpring.pdf" download class="btn text-white" style="background-color: #dc3545!important;">
         Baixe o e-book agora!
       </a>
     </div>
@@ -79,7 +79,7 @@
           <p class="card-text text-light">
             Aprenda Java 8, lógica de programação e programação orientada a objetos.
           </p>
-          <a href="img/ebookJava.pdf" download type="button" class="btn btn-danger text-white bg-danger">
+          <a href="img/ebookJava.pdf" download class="btn text-white" style="background-color: #dc3545!important;">
             Baixe o e-book agora!
           </a>
         </div>
@@ -95,7 +95,7 @@
           <p class="card-text text-light">
             Aprenda sobre a principal arquitetura de software.
           </p>
-          <a href="img/ebookWeb.pdf" download type="button" class="btn btn-danger text-white bg-danger">
+          <a href="img/ebookWeb.pdf" download class="btn text-white" style="background-color: #dc3545!important;">
             Baixe o e-book agora!
           </a>
         </div>
